Adds checkstyle configuration using Google's style
  - Configures https://docs.gradle.org/current/userguide/checkstyle_plugin.html

  - The checkstyle configuration is provided at https://checkstyle.sourceforge.io/

  - IntelliJ Google Code Style scheme: https://github.com/google/styleguide/blob/gh-pages/intellij-java-google-style.xml

  - Plugin for IntelliJ: https://github.com/google/google-java-format
  And extra VM options are needed: https://github.com/google/google-java-format/issues/787

  - Excludes Javadocs requirements for now (see suppressions.xml)

  - See README.md for further instructions